<resources>
    <string name="app_name" translatable="false">Price Calculator</string>

    <string name="input_price">Price</string>
    <string name="input_price_suffix">$</string>
    <string name="input_amount">Amount</string>
    <string name="input_amount_suffix">units</string>

    <string name="result_description">$ per one unit</string>
    <string name="copyrights">Developed by <a href="https://patriotovsky.ru/">Anton Neverov</a></string>
</resources>