<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@drawable/card_transition_in"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/inputs_barrier"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/amount_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:gravity="center_horizontal|top"
            android:text="@string/result_description"
            android:textAlignment="center"
            android:textColor="@color/grey_text"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_result" />

        <TextView
            android:id="@+id/price_result"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:text="1 999,54"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/price_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_input"
        android:ems="10"
        android:hint="@string/input_price"
        android:inputType="numberDecimal"
        android:paddingLeft="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <EditText
        android:id="@+id/amount_input"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_input"
        android:ems="10"
        android:hint="@string/input_amount"
        android:inputType="numberDecimal"
        android:paddingLeft="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grey_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price_input"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/inputs_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="amount_input,price_input"
        tools:layout_editor_absoluteX="402dp"
        tools:layout_editor_absoluteY="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/input_price_suffix"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/price_input"
        app:layout_constraintEnd_toEndOf="@+id/price_input"
        app:layout_constraintTop_toTopOf="@+id/price_input" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/input_amount_suffix"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/amount_input"
        app:layout_constraintEnd_toEndOf="@+id/amount_input"
        app:layout_constraintTop_toTopOf="@+id/amount_input" />

</androidx.constraintlayout.widget.ConstraintLayout>